# nbt-to-mcstructure

./: .editorconfig  .envrc.sample  .gitignore  LICENSE  README.md  README_zh.md  __main__.py  flake.nix  java_structures.py  nbt-to-mcstructure.spec  progress_bar.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  main.yml  test.yml
assets/: blockstates.json  old2new.json
cli/: __main__.py  java_structures.py
cli/data/: bedsJ2B.json  blocksJ2B.json  blockstates.json  skullJ2B.json
nbt-to-mcstructure/: .gitignore  README.MD  README.md  __main__.py  filter.json  java_structures.py  progress_bar.py  pynbt.py  requirements.txt
nbt-to-mcstructure/data/: settings.json
nix/: python-packages.nix
regolith-test-project/: README.md  config.json
scripts/: mojang-blocks.js  update-pip-to-nix.sh
structures/: README.md  mapart_1x1.nbt  mapart_2x2.nbt  mapart_4x4.nbt
structures/bastion/: jigsaw_test.nbt
structures/mansion/: 1x2_a3.nbt  2x2_a1.nbt  2x2_a4.nbt  2x2_b5.nbt
structures/nether_fossils/: fossil_1.nbt  fossil_10.nbt  fossil_11.nbt  fossil_12.nbt  fossil_13.nbt  fossil_14.nbt  fossil_2.nbt  fossil_3.nbt  fossil_4.nbt  fossil_5.nbt  fossil_6.nbt  fossil_7.nbt  fossil_8.nbt  fossil_9.nbt
structures/pillageroutpost/: feature_cage_with_allays.nbt
structures/ruined_portal/: giant_portal_1.nbt  giant_portal_2.nbt  giant_portal_3.nbt  portal_1.nbt  portal_10.nbt  portal_2.nbt  portal_4.nbt  portal_5.nbt  portal_6.nbt  portal_7.nbt  portal_8.nbt  portal_9.nbt
vanilla-mappings/: package-lock.json  package.json  tsconfig.json
(+343 files in other folders)
